🔧 Add visible comment for twin paradox demo button in Time Dilation section
- Added HTML comment to make the button more visible
- Button should appear in 'Temps Propre et Dilatation Temporelle' section
- Force browser refresh to see the changes

--- a/cone-lumiere-colore.html
+++ b/cone-lumiere-colore.html
@@ -374,6 +374,7 @@
                     <strong>🎯 Paradoxe des jumeaux :</strong> Un voyageur accéléré vieillit moins qu'un observateur au repos. Le pourcentage affiché montre le rapport τ/t.
                 </div>
                 
+                <!-- BOUTON DEMO PARADOXE DES JUMEAUX - SECTION TEMPS PROPRE -->
                 <div style="text-align: center; margin: 15px 0;">
                     <button class="twin-paradox-demo-btn" style="
                         background: linear-gradient(45deg, #ff6b6b, #feca57);
