🚀 Phase 3 TERMINÉE : Intégration du module physics_relativistic
✅ Bridge module fonctionnel - L'application utilise maintenant le nouveau système
✅ Trajectoires physiquement correctes - Plus de violation des limites relativistes
✅ Démo des jumeaux validée - Paramètres ajustés pour v = 0.33c (ratio x₂/t₂ = 1/3)
✅ Effet 'angle droit' observé - Validation des phénomènes relativistes
✅ Pages de debug créées - Outils pour valider les calculs et visualiser les effets
✅ Favicon ajouté - Icône fusée 🚀 pour l'application

🔬 Découvertes importantes :
- L'effet 'angle droit' à haute vitesse est physiquement correct
- Analogie parfaite avec un photon rebondissant sur un miroir
- Le 'mur de l'énergie' rend les changements de direction très coûteux près de c

📁 Fichiers ajoutés/modifiés :
- Nouveau module physics_relativistic/ (rapidity.js, rendezvous.js, trajectory.js)
- Bridge module js/physics/bridge.js pour compatibilité
- Pages de debug (debug-rendezvous.html, debug-trajectory.html, debug-relativistic-effects.html)
- Mise à jour des imports et intégration dans l'application principale
- Journal de progression JOURNAL_REFACTO_RAPIDITY.md

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heatmap des Cônes de Lumière</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     
     <!-- Force cache reload - Mode ultra agressif -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, max-age=0">
