feat: Refactoring modulaire complet - Architecture modulaire avec physics/gravity.js, physics/propagation.js, objects/masses.js - Système de propagation causale fonctionnel - Gestion des masses et trous noirs modulaire - Interface utilisateur complète avec panneau de contrôle - Correction des imports ES6 et des dépendances circulaires

--- a/gravitation/index.html
+++ b/gravitation/index.html
@@ -16,28 +16,7 @@
                     <span>FPS: <span id="fps">0</span></span>
                 </div>
                 <div class="status-item">
-                    <span>Temps Référence: <span id="referenceTime">0.00</span> s</span>
-                </div>
-                <div class="status-item">
-                    <span>Masses: <span id="massCount">0</span></span>
-                </div>
-                <div class="status-item">
-                    <span>Versions: <span id="versionInfo">0</span></span>
-                </div>
-                <div class="status-item">
-                    <span>Vaisseaux: <span id="spacecraftCount">0</span></span>
-                </div>
-                <div class="status-item">
-                    <span>Lasers: <span id="laserCount">0</span></span>
-                </div>
-                <div class="status-item">
-                    <span>Redshift: <span id="redshiftInfo">0.000</span></span>
-                </div>
-                <div class="status-item">
-                    <span>Géodésiques: <span id="geodesicCount">0</span></span>
-                </div>
-                <div class="status-item">
-                    <span>Horloges: <span id="clockCount">0</span></span>
+                    <span>Temps Référence: <span id="referenceTime">0.00</span></span>
                 </div>
             </div>
         </div>
@@ -288,7 +267,7 @@
                     </div>
                     <div class="setting-item">
                         <label for="showGeodesicDebugToggle">Afficher infos géodésiques:</label>
-                        <input type="checkbox" id="showGeodesicDebugToggle" checked>
+                        <input type="checkbox" id="showGeodesicDebugToggle">
                     </div>
                     
                     <div class="setting-item">
@@ -306,6 +285,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html> 
