--- a/gravitation/index.html
+++ b/gravitation/index.html
@@ -306,6 +306,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html> 
